[package]
name = "walker"
version = "1.0.0-beta-26"
edition = "2024"

[dependencies]
gtk4 = { version = "^0.9.7", features = ["v4_6", "v4_12", "gio_v2_80"] }
gtk4-layer-shell = "0.5.0"
protobuf = "3.7.2"
serde = { version = "1.0.219", features = ["derive"] }
mime_guess = "2.0"
chrono = { version = "0.4", features = ["clock"] }
config = "0.15.14"
dirs = "6.0.0"
notify = "8.2.0"
poppler-rs = "0.25.0"
cairo-rs = "0.21.1"
gdk-pixbuf = "0.21.1"
nucleo-matcher = "0.3.1"
which = "8.0"

[build-dependencies]
protobuf-codegen = "3.4"
protoc-bin-vendored = "3.0"
